project-22/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: website-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: website

  template:
    metadata:
      labels:
        app: website

    spec:
      containers:
      - name: website
        image: saikiran1605/devops-website:latest

        ports:
        - containerPort: 80
