project-22/pod-pvc.yaml
apiVersion: v1
kind: Pod

metadata:
  name: storage-pod

spec:
  containers:
  - name: nginx
    image: nginx

    volumeMounts:
    - mountPath: /usr/share/nginx/html/data
      name: my-storage

  volumes:
  - name: my-storage

    persistentVolumeClaim:
      claimName: my-pvc
