project-22/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: website-service

spec:
  selector:
    app: website

  ports:
  - port: 80
    targetPort: 80

  type: NodePort
