project-22/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: website-ingress

spec:
  rules:
  - host: website.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80
